k8s-infra/helm_infra/application-charts/kibana/sample-ingress-spec.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required For Logging
    nginx.ingress.kubernetes.io/auth-secret: kibana-auth
    #nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "false"
    nginx.ingress.kubernetes.io/auth-tls-secret: default/ingresscert
    #nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    #nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/auth-type: basic
    #nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS
    #nginx.ingress.kubernetes.io/enable-cors: "true"
  creationTimestamp: null
  generation: 1
  labels:
    app: kibana
    chart: kibana-0.16.4
    heritage: Tiller
    release: kibana
  name: kibana
  selfLink: /apis/extensions/v1beta1/namespaces/logging/ingresses/kibana
spec:
  rules:
  - host: cvim-k1
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 443
        path: /
  tls:
  - hosts:
    - cvim-k1
    secretName: ingresscert
status:
  loadBalancer: {}
